# rust-text-editor

./: Cargo.toml
src/: clipboard.rs  direction.rs  keyboard.rs  main.rs  mode.rs  terminal.rs
src/terminal/: keyboard.rs
src/terminal/keyboard/: cursor.rs
