[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
expect_used = "warn"
unwrap_used = "deny"

[dependencies]
arboard = { version = "3.3.0", default-features = false }
crossterm = "0.27.0"
once_cell = "1.19.0"
